# TinyBus

./: .gitignore  .gitmodules  LICENSE  readme.md
application/4-Channel Dimmer Rev2.2/: Dimmermodul.atsln
application/Ring Light Controller/: Ring light controller.atsln
application/Ring Light Driver Rev1.3/: RingLightDriver.atsln
application/Teelicht Rev1.0/: Teelicht.atsln
application/_library/: random.c  random.h
application/_library/_test/: CMakeLists.txt  _test_helper.hpp  main.cpp  test_ledFader.hpp  test_perlin.hpp
application/eepromWriter 841/: EepromWriter841.atsln
application/luftreiniger_app/: Luftreiniger.atsln
application/par16/: PAR-16.atsln
documentation/: Doc.code-workspace  DownstreamFirmwareUpdate.html  InterfaceReferenceImplementation.T3001  TinyBus.html  architecture.vsd  connector.vsd  global.css  index.html  logo.vsd  page.js  system.vsd
kernel/: HardwareIdList.md
kernel/_test/: CMakeLists.txt  _test_helper.hpp  bootloader_test.h  main.cpp  main.h  test_comUart.hpp  test_tickTimer.hpp
kernel/attiny816/: bootloader.h  main.c  main.h  main_driver.h  tinyloader.cproj
kernel/attiny841/: main.c  main.h  main_driver.h  tinyloader.cproj
kernel/attiny841_4-channelDimmer/: kernelUpdater.hexmerger  main.h
kernel/attiny841_par-16/: kernelUpdater.hexmerger  main.h
kernel/attiny841_par16/: main.h
kernel/attiny841_ringLightController/: main.c  main.h  tinyloader.atsln  tinyloader.cproj
kernel/attiny841_ringLightDriver/: kernelUpdater.hexmerger  main.h  tinyloader.cproj
kernel/attiny841_teelicht/: kernelUpdater.hexmerger  main.h  (+2 more)
(+209 files in other folders)
